# nrminor-stats

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
scripts/: benchmark.sh  generate_images.py  github_stats.py  github_stats_cache.py  test_performance.py
src/: cache.rs  github_client.rs  main.rs  stats.rs  svg_generator.rs
