[package]
name = "github-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"